# NewCourrierManager

./: CMakeLists.txt  EXTRADLL  INSTALLER  README
CourrierManager-build-desktop-Qt_4_8_1_for_Desktop_-_MinGW__Qt_SDK__Release/: Makefile  Makefile.Debug  Makefile.Release  object_script.NewCourrierManager.Release
config/: plugins.xml
plugins/: CMakeLists.txt
plugins/Hello/include/: HelloPlugin.h
plugins/Hello/src/: Hello.cpp
plugins/ocr/include/: COcrEngine.h
plugins/ocr/src/: COcrEngine.cpp
source/: CConfigFrame.cpp  CConfigFrame.h  CControler.cpp  CControler.h  CDate.cpp  CDrawPanelWidget.cpp  CDrawPanelWidget.h  CError.h  CFastSearch.cpp  CFastSearch.h  CFileManager.cpp  CFileManager.cpp.autosave  CFileManager.h  CFileManager.h.autosave  CGestion.cpp  CGestion.h  CMakeLists.txt  CNetwork.cpp  CNetwork.h  CPatient.cpp  CPatient.h  CView.cpp  CView.h  CourrierManager.cpp  CourrierManager.h  CourrierManager.pro  CourrierManager.pro.user.2.5pre1  CourrierManager.pro.user.8c97e57.2.7pre1  Makefile  Makefile.Debug  Makefile.Release  README  courriermanager.ui  main.cpp  mainRes.rc  object_script.NewCourrierManager.Debug
source/CourrierManager/: CMakeLists.txt
source/CourrierManager/core/: CMakeLists.txt
source/CourrierManager/core/include/: CConfigFrame.h  CControler.h  CDrawPanelWidget.h  CFileManager.h
source/CourrierManager/core/include/Action/: CCancelAction.h
source/CourrierManager/core/res/: iconmac.icns
source/CourrierManager/core/src/: CConfigFrame.cpp  CControler.cpp  CFastSearch.cpp  CFileManager.cpp  CNetwork.cpp  CPatient.cpp
source/CourrierManager/dynamic/: plugins_config.h.in
source/CourrierManager/include/: CNetwork.h  CView.h
source/CourrierManager/include/Action/: CActionManager.h
source/CourrierManager/plugins/: CMakeLists.txt
source/CourrierManager/plugins/CleanLine/: CMakeLists.txt
source/CourrierManager/plugins/CleanLine/include/: Hello.h
source/CourrierManager/plugins/CleanLine/src/: HelloPlugin.cpp
source/CourrierManager/plugins/Hello/: CMakeLists.txt
source/CourrierManager/plugins/Hello/include/: Hello.h  HelloPlugin.h
source/CourrierManager/plugins/Hello/src/: Hello.cpp  HelloPlugin.cpp
source/CourrierManager/plugins/Ocr/: CMakeLists.txt
source/CourrierManager/plugins/Ocr/Tesseract/include/: COcrEngine.h
source/CourrierManager/plugins/Ocr/Tesseract/src/: COcrEngine.cpp
source/CourrierManager/plugins/common/: CMakeLists.txt
source/CourrierManager/plugins/common/include/: CAbstractFilter.h  CAbstractPlugin.h  CPluginLoader.h
source/CourrierManager/plugins/common/src/: CAbstractFilter.cpp  CAbstractPlugin.cpp  CPluginLoader.cpp
source/CourrierManager/program/: CMakeLists.txt
source/CourrierManager/program/include/: CConfigFrame.h  CControler.h  CDate.h  CError.h  CFastSearch.h  CFileManager.h  CPluginLoader.h  CView.h
source/CourrierManager/program/include/Action/: CAction.h
source/CourrierManager/program/include/Network/: CNetwork.h  CNetworkFTP.h  CNetworkServer.h
source/CourrierManager/program/include/Ocr/: COcrAnalyzer.h  COcrManager.h
source/CourrierManager/program/res/: resources.qrc
source/CourrierManager/program/res/qss/: stylesheet.qss
source/CourrierManager/program/src/: CConfigFrame.cpp  CControler.cpp  CDate.cpp  CFastSearch.cpp  CFileManager.cpp  CPluginLoader.cpp  CView.cpp  main.cpp
source/CourrierManager/program/src/Action/: CAction.cpp
source/CourrierManager/program/src/Network/: CNetwork.cpp  CNetworkFTP.cpp  CNetworkServer.cpp
source/CourrierManager/program/src/Ocr/: COcrAnalyzer.cpp  COcrManager.cpp
source/CourrierManager/program/ui_forms/: courriermanager.ui
source/CourrierManager/src/: CControler.cpp  CFileManager.cpp  CView.cpp  main.cpp
source/CourrierManager/src/Action/: CActionManager.cpp  CCancelAction.cpp
source/CourrierManager/ui_forms/: courriermanager.ui
source/CourrierServer/: CMakeLists.txt  CServer.cpp  CServer.h  CourrierServer.pro  main.cpp
source/include/: CDrawPanel.h  CGestion.h  CourrierManager.h
source/plugins/: CMakeLists.txt
source/plugins/Hello/: CMakeLists.txt  hello.cpp
source/src/: CDrawPanel.cpp  CFastSearch.cpp  CGestion.cpp  CourrierManager.cpp
